# radioo

./: .gitignore  CLAUDE.md  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
electron/: encoder.ts  icecast.ts  ipc-handlers.ts  listener-poll.test.ts  listener-poll.ts  main.ts  preload.ts  proc-capture.test.ts  proc-capture.ts
native/proc-audio-capture/: Cargo.toml  README.md
native/proc-audio-capture/src/: mac.rs  main.rs  win.rs
public/worklets/: noise-gate-processor.js  pcm-capture-processor.js  sys-pcm-player-processor.js  sys-pcm-player-processor.test.ts
scripts/: copy-sidecar.mjs
src/: App.svelte  app.css  env.d.ts
src/lib/: types.ts
src/lib/audio/: engine.ts
src/lib/components/: Combobox.svelte  DeviceSelector.svelte  EffectsPanel.svelte  HelpPanel.svelte  MixerPanel.svelte  MusicPlayerPanel.svelte  RecordingPanel.svelte  ServerPanel.svelte  SettingsPanel.svelte  SourcesPanel.svelte  StatusBar.svelte  VuMeter.svelte
src/lib/i18n/: i18n.svelte.ts  i18n.test.ts
src/lib/i18n/messages/: de.ts  en.ts  es.ts  fr.ts  it.ts  ja.ts  pt.ts
src/lib/stores/: app-store.svelte.ts  app-store.test.ts
