[package]
name = "proc-audio-capture"
version = "0.1.0"
edition = "2021"
description = "Per-process WASAPI audio loopback capture sidecar for Radioo"
publish = false

[[bin]]
name = "proc-audio-capture"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies]
wasapi = "0.23"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_Media_Audio",
] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
